snapshots/serde/test_suite/tests/regression/issue2371.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 43
kind: unit
spaces: []
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 8
    N1: 58
    n2: 11
    N2: 38
    length: 96
    estimated_program_length: 62.054
    purity_ratio: 0.646
    vocabulary: 19
    volume: 407.801
    difficulty: 13.818
    level: 0.072
    effort: 5635.069
    time: 313.059
    bugs: 0.106
  loc:
    sloc: 43
    ploc: 38
    lloc: 0
    cloc: 0
    blank: 5
    sloc_average: 43
    ploc_average: 38
    lloc_average: 0
    cloc_average: 0
    blank_average: 5
    sloc_min: 43
    sloc_max: 43
    cloc_min: 0
    cloc_max: 0
    ploc_min: 38
    ploc_max: 38
    lloc_min: 0
    lloc_max: 0
    blank_min: 5
    blank_max: 5
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 78.583
    mi_sei: 37.772
    mi_visual_studio: 45.955
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
