snapshots/serde/test_suite/tests/regression/issue2409.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 11
kind: unit
spaces: []
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 6
    N1: 13
    n2: 6
    N2: 9
    length: 22
    estimated_program_length: 31.02
    purity_ratio: 1.41
    vocabulary: 12
    volume: 78.869
    difficulty: 4.5
    level: 0.222
    effort: 354.911
    time: 19.717
    bugs: 0.017
  loc:
    sloc: 11
    ploc: 9
    lloc: 1
    cloc: 0
    blank: 2
    sloc_average: 11
    ploc_average: 9
    lloc_average: 1
    cloc_average: 0
    blank_average: 2
    sloc_min: 11
    sloc_max: 11
    cloc_min: 0
    cloc_max: 0
    ploc_min: 9
    ploc_max: 9
    lloc_min: 1
    lloc_max: 1
    blank_min: 2
    blank_max: 2
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 109.212
    mi_sei: 81.96
    mi_visual_studio: 63.866
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0

