snapshots/serde/test_suite/tests/regression/issue2415.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
{
  "name": null,
  "start_line": 1,
  "end_line": 5,
  "kind": "unit",
  "spaces": [],
  "metrics": {
    "nargs": {
      "total_functions": 0.0,
      "total_closures": 0.0,
      "average_functions": 0.0,
      "average_closures": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "nexits": {
      "sum": 0.0,
      "average": null,
      "min": 0.0,
      "max": 0.0
    },
    "cognitive": {
      "sum": 0.0,
      "average": null,
      "min": 0.0,
      "max": 0.0
    },
    "cyclomatic": {
      "sum": 1.0,
      "average": 1.0,
      "min": 1.0,
      "max": 1.0
    },
    "halstead": {
      "n1": 3.0,
      "N1": 6.0,
      "n2": 4.0,
      "N2": 5.0,
      "length": 11.0,
      "estimated_program_length": 12.754887502163468,
      "purity_ratio": 1.1595352274694062,
      "vocabulary": 7.0,
      "volume": 30.880904142633646,
      "difficulty": 1.875,
      "level": 0.5333333333333333,
      "effort": 57.901695267438086,
      "time": 3.216760848191005,
      "bugs": 0.004988916840915202
    },
    "loc": {
      "sloc": 5.0,
      "ploc": 4.0,
      "lloc": 0.0,
      "cloc": 0.0,
      "blank": 1.0,
      "sloc_average": 5.0,
      "ploc_average": 4.0,
      "lloc_average": 0.0,
      "cloc_average": 0.0,
      "blank_average": 1.0,
      "sloc_min": 5.0,
      "sloc_max": 5.0,
      "cloc_min": 0.0,
      "cloc_max": 0.0,
      "ploc_min": 4.0,
      "ploc_max": 4.0,
      "lloc_min": 0.0,
      "lloc_max": 0.0,
      "blank_min": 1.0,
      "blank_max": 1.0
    },
    "nom": {
      "functions": 0.0,
      "closures": 0.0,
      "functions_average": 0.0,
      "closures_average": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "mi": {
      "mi_original": 126.86038819798438,
      "mi_sei": 107.42182080587256,
      "mi_visual_studio": 74.18736151928911
    },
    "abc": {
      "assignments": 0.0,
      "branches": 0.0,
      "conditions": 0.0,
      "magnitude": 0.0,
      "assignments_average": 0.0,
      "branches_average": 0.0,
      "conditions_average": 0.0,
      "assignments_min": 0.0,
      "assignments_max": 0.0,
      "branches_min": 0.0,
      "branches_max": 0.0,
      "conditions_min": 0.0,
      "conditions_max": 0.0
    }
  }
}
